--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,7 +1,7 @@
 ---
 title: 'Demo Day: AI_Saturday_Abuja (2nd Cohort)'
 date: 2019-06-12
-permalink: https://medium.com/@tunde.ajayi99/demo-day-ai-saturday-abuja-2nd-cohort-17ced8c37329 #/posts/2012/08/blog-post-1/
+permalink: /posts/2019/06/blog-post-1/
 tags:
   - cool posts
   - category1
@@ -12,6 +12,7 @@ tags:
 “What we call the beginning is often the end and to make an end is to make a beginning. The end is where we start from.”
 T.S Elliot
 The journey of the second cohort of AI Saturday Abuja, which started early this year, has finally come to an end today (June 8, 2019) amidst funfairs. The positive energy that engulfed the atmosphere of Ventures Park, the venue of the demo day, was infectious. Sixteen Saturdays completed already? Yes!!! How time flies. The good news is, the end of the second cohort is the incubation and birth of the third. The second cohort, just like the first, had attracted participants from various fields and disciplines (Law, GIS, Economics, Electronics, Mechanical etc) not exclusively for Computer Science. Yes, you heard me right, with basic knowledge of microcomputer utilization, you qualify to be part of AI Saturday where in beginners’ class, you learn concepts like introduction to Python, Jupyter notebook, Git, Data Visualization, Regular Expression, ML algorithms etc. The intermediate class did more of Deep Learning. Top-down learning approach using Jeremy Howard’s Fastai technique was adopted in some of the intermediate classes. I’ll give eye-witness account of everything I enjoyed, being among the privileged ones who attended the demo day (all thanks to Chijioke Eze, the friend who introduced me to the AI6 Abuja and encouraged me to continue when I wanted to quit after my first class). Fasten your seatbelt and stay glued till the end.
+
 The day started with participants arriving before 9am. Presenters of personal and group projects took advantage of their early arrival to go through their slides and test run their codes. You can read excitement, with a tint of nervousness, on the faces of even the most confident, which was further noticeable when the coordinator of AISaturday Abuja, Simon Ubi, announced the commencement of the demo day.
 
 Headings are cool
