--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -9,11 +9,20 @@ tags:
 ---
 
 <!-- This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool. -->
-“What we call the beginning is often the end and to make an end is to make a beginning. The end is where we start from.”
+>“What we call the beginning is often the end and to make an end is to make a beginning. The end is where we start from.”
 T.S Elliot
+
 The journey of the second cohort of AI Saturday Abuja, which started early this year, has finally come to an end today (June 8, 2019) amidst funfairs. The positive energy that engulfed the atmosphere of Ventures Park, the venue of the demo day, was infectious. Sixteen Saturdays completed already? Yes!!! How time flies. The good news is, the end of the second cohort is the incubation and birth of the third. The second cohort, just like the first, had attracted participants from various fields and disciplines (Law, GIS, Economics, Electronics, Mechanical etc) not exclusively for Computer Science. Yes, you heard me right, with basic knowledge of microcomputer utilization, you qualify to be part of AI Saturday where in beginners’ class, you learn concepts like introduction to Python, Jupyter notebook, Git, Data Visualization, Regular Expression, ML algorithms etc. The intermediate class did more of Deep Learning. Top-down learning approach using Jeremy Howard’s Fastai technique was adopted in some of the intermediate classes. I’ll give eye-witness account of everything I enjoyed, being among the privileged ones who attended the demo day (all thanks to Chijioke Eze, the friend who introduced me to the AI6 Abuja and encouraged me to continue when I wanted to quit after my first class). Fasten your seatbelt and stay glued till the end.
 
 The day started with participants arriving before 9am. Presenters of personal and group projects took advantage of their early arrival to go through their slides and test run their codes. You can read excitement, with a tint of nervousness, on the faces of even the most confident, which was further noticeable when the coordinator of AISaturday Abuja, Simon Ubi, announced the commencement of the demo day.
+
+Preliminary discussions centred around the plight of human traffic controllers who carry out their task under the scorching sun, with suggestions on how AI can leverage computer vision to improve the traffic control system. The day kicked off with presentation of personal projects; group projects were presented thereafter.
+
+The first presenter was I.K Emmanuel, who developed a Loan Grant Predicting app. The highlight of his presentation was the deployment of his model using flask. It was an eye-opener for everyone in the beginners’ class considering we were yet to cover how to deploy models. It was a big motivation and I remember telling myself to include flask on the list of things I hope to learn before the next cohort.
+
+Next came Sumayyah Musa, who presented a ML project on Relative Humidity Prediction, motivated by a Cotton Manufacturing Company. Weather readings were collected over three years, with all measurements taken in the morning except a feature. The data was used to train, compare and contrast two ML models (Logistic Regression and Random Forest Classifiers) to classify the target as either Low or High relative humidity. Random Forest was concluded to be the most suitable.
+
+An interlude was observed after the second presentation. Simon Ubi asked if the house can work on a project that involve flood prediction. The house agreed that it was feasible, given the right dataset. He also pointed out that AISaturday is not only about learning how to implement Machine Learning algorithms, it is also a place that provides enabling environment for AI researchers. I couldn’t feel more at home after hearing this, considering I intend to pursue academic research in AI.
 
 Headings are cool
 ======
