--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -24,11 +24,16 @@ Next came Sumayyah Musa, who presented a ML project on Relative Humidity Predict
 
 An interlude was observed after the second presentation. Simon Ubi asked if the house can work on a project that involve flood prediction. The house agreed that it was feasible, given the right dataset. He also pointed out that AISaturday is not only about learning how to implement Machine Learning algorithms, it is also a place that provides enabling environment for AI researchers. I couldn’t feel more at home after hearing this, considering I intend to pursue academic research in AI.
 
-Headings are cool
-======
+The third individual project presentation was by Tosin, who presented a project on Document OCR Classifier. His motivation came from the hurdles he faced when he tried to obtain his certificates from his past institutions of learning.
 
-You can have many headings
-======
+Around 12.45pm, Tunde, one of the senior blocks of the cohort, moved motion for a 5-minute break, before the commencement of group presentations. Simon took the opportunity to announce the presence of Dr. B.K Mustapha, an associate of AISaturdayAbuja.
 
-Aren't headings cool?
-------
+Group presentations commenced immediately we resumed from the break. The projects were past Kaggle competitions. Group 1’s project was on Santander Customer Transaction Prediction — a binary classification project that targets whether a customer will make a transaction or not. Group 2’s project was on predicting future sales for a shop based in Russia. Group 3’s project was on New York City Taxi Fare prediction, which was deployed on a web app. General appraisal followed after the group presentation:
+
+Tunde’s observation on project deployment is the possibility of making the deployed system have users select data from a list by integrating plugins with specialized libraries, instead of having to manually enter the values for the fields.
+
+Dr. B.K appraised the cohort and above all, the demos. He gave exposition on the benefits of the demo day from an academic and research perspective. He encouraged us to look around us for problems that can be solved using even simple ML algorithms.
+
+Simon Ubi advised all groups to leverage their collaboration to improve beyond the cohort, also advising everyone to use the break until the next cohort to intensify learning.
+
+Concluding the demo day, Simon Ubi, commended the outstanding performance of two participants of the cohort, Emelda and I.K Emmanuel. The house celebrated them as they were announced as part of the Instructors for the next cohort. The recognition was indeed well deserved, as their devotion and commitment were glaring to all. Simon also anchored deliberations about the forthcoming Hackathon, which was slated to usher in the next cohort and the proposed hiking to be undertaken by participants will bring AI Saturday Abuja’s second cohort to a close. I intend to participate and enjoy my first hiking ever. Did I tell you we planned to rock our super dope AISaturday Abuja customized T-shirt? Keep your fingers crossed for more stories about the adventures of AI6Abuja.
