--- a/_posts/2013-08-14-blog-post-2.md
+++ b/_posts/2013-08-14-blog-post-2.md
@@ -8,7 +8,7 @@ tags:
   - category2
 ---
 
-The two-week long boot camp organised for the first set of African Master of Machine Intelligence (AMMI) students at African Institute for Mathematical Sciences, Ghana, anchored by Ala Eddine Ayadi, came to an end today, October 24, 2019. Common adjectives used describe the experience by the participants include: intensive, rigorous and enlightening. It was entirely hands-on, consisting of class exercises after each module and projects.
+The two-week long boot camp organised for the first set of African Master of Machine Intelligence (AMMI) students at African Institute for Mathematical Sciences (AIMS) Ghana, anchored by Ala Eddine Ayadi, came to an end today, October 24, 2019. Common adjectives used describe the experience by the participants include: intensive, rigorous and enlightening. It was entirely hands-on, consisting of class exercises after each module and projects.
 
 The students were of diverse backgrounds: mathematics, computer science, physics, information system etc. Some students had prior knowledge of machine learning and data science through online courses, AI communities, bootcamps etc. but there were others who had zero knowledge. The course modules were structured to be all-inclusive, as they cover areas including python introduction (pandas, numpy, matplotlib and seaborn visualization), algorithm analysis and data structures, machine learning fundamentals, natural language processing, deep learning and time series concept.
 
