--- a/_posts/2014-08-14-blog-post-3.md
+++ b/_posts/2014-08-14-blog-post-3.md
@@ -1,20 +1,49 @@
 ---
-title: 'Blog Post number 3'
-date: 2014-08-14
-permalink: /posts/2014/08/blog-post-3/
+title: 'Life as an African Master of Machine Intelligence (AMMI) Student'
+date: 2020-07-19
+permalink: /posts/2020/07/blog-post-3/
 tags:
   - cool posts
   - category1
   - category2
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool. 
+>“ The best scientists are not those who provide solutions, but those who ask the right questions.” Moustapha Cisse (2019)
 
-Headings are cool
+
+When it all started
 ======
 
-You can have many headings
+Tunde Ajayi, a beneficiary of the 2019/2020 AMMI scholarship, African Institute for Mathematical Sciences (AIMS) Ghana, is an addition to my life’s portfolio (thanks to Prof. David Amos, Dr. Victor Odumuyiwa and Dr. Moses Akanbi who never got tired of writing my recommendation letters). The programme, which attracted students from about 16 African countries, has been a life-changing experience for me thus far. Looking back to where it all started, I can say it’s been an awesome journey. I was one of those students who came in with approximately zero knowledge of machine learning. I had just started my journey as a self-taught software developer (after resigning from my former job as a high school teacher) when I got my admission notification. I had a pretty rough start due to my limited knowledge, it took me months into the programme before I started making sense of what was being taught in class. Of course, I had help.
+
+The highlight of my experience
 ======
 
-Aren't headings cool?
+One of the most fascinating things about the AMMI programme was being taught by experts and professionals in the field of AI. My lecturers were expert researchers from Facebook, Google and other reputable research institutes. They were the names, as a student from my part of the continent, you can only see on the covers of textbooks or read about on the pages of articles and publications. I never in my wildest imagination expected to be taught by the inventors of the technology we read about in class. Being taught by the likes of Moustapha Cisse, Head of Google AI in Ghana, Antoine Bordes, Head of Facebook AI Research (FAIR) Paris, Kyunghyun Cho who developed GRU, Laurens van der Maaten who developed t-SNE and a host of others was like a dream. I was literally starstruck the day I looked up one of them online, I can remember running and screaming to my mates to tell them of my discovery. They laughed at me for just knowing that. It felt so good to benefit from firsthand knowledge of these technologies, not being handed down third-party information. These experts taught us history and the state-of-the-art.
+
+How I got help
+======
+
+Things became smoother when I decided to work on my limitations. Help came in so many forms. A large portion of what I learnt was from outside the traditional classroom setting.
+
+People: I had amazing people around to help me grow. My flatmates (Abubakr, Jean-Paul and Ahmed) were a bunch of very smart and wonderful people who were willing to teach me whenever I ran to them. My coursemates (big thanks to Gedeon et al.) were ever willing to help when approached too. The AMMI Tutors and entire AIMS Ghana staff were also very helpful in this journey, I cannot thank them enough for their impacts in my life.
+
+Online courses: I had a wonderful reading partner (Blessing Bassey) who encouraged me to take online courses that helped me discover a lot that I did not know and could not get in class. I took courses that helped me gain knowledge in Machine Learning, Deep Learning, Mathematics for Machine Learning and Python. I wish I took those online courses sooner, I probably would have connected more in class.
+
+Study Group: I co-founded our campus NLP Study Group with a coursemate (Salomon Kabongo) a few weeks into the programme. The regular meetups gave me a prior, which made my NLP classes very interesting and ended up being my favourite during the programme. In the group, I also learnt how to read and present technical papers, which was one of our core activities (I wish I could write research papers the way I write stories). I joined other study groups too and they were really helpful in teaching me how to work as a team and collaborate on projects.
+
+Online coding platforms: In order to improve my programming skills, I practiced on HackerRank and LeetCode. They helped me to make sense of those concepts I learnt. I was faced with hands-on exercises that were challenging and stimulating. Whenever I got stuck on problems, I had people I ran to, who were willing to put me through (many thanks to Kolawole Tajudeen).
+
+External help: I was fortunate to be introduced to some researchers (my project co-advisors) from FAIR (Emily Dinan, Kurt Shuster and Eric Smith) by my adorable project advisor, Antoine Bordes. They are very smart, accommodating and passionate. They took time, out of their busy schedules, to hold weekly meetings with me. I can tell them basically anything and learn virtually everything. They have great and amiable personalities and I want so much to be like them.
+
+What I intend to do after AMMI
+======
+
+Human-Computer Interaction is an aspect of artificial intelligence that is fascinating to me. I love to work as a Researcher in an AI Lab, where I can build dialogue systems, like Chatbots, that can relate with humans and other Chatbots in an empathetic way. Artificial Intelligence is about teaching machines to think like humans, I want to teach machines to feel like humans.
+
+
+
+Additional reading
 ------
+
+See the suggested links below to read my other blog posts. If you find this post helpful, leave a comment about what helped your journey as a student.
