--- a/_posts/2014-08-14-blog-post-3.md
+++ b/_posts/2014-08-14-blog-post-3.md
@@ -26,15 +26,15 @@ How I got help
 
 Things became smoother when I decided to work on my limitations. Help came in so many forms. A large portion of what I learnt was from outside the traditional classroom setting.
 
-People: I had amazing people around to help me grow. My flatmates (Abubakr, Jean-Paul and Ahmed) were a bunch of very smart and wonderful people who were willing to teach me whenever I ran to them. My coursemates (big thanks to Gedeon et al.) were ever willing to help when approached too. The AMMI Tutors and entire AIMS Ghana staff were also very helpful in this journey, I cannot thank them enough for their impacts in my life.
+**People:** I had amazing people around to help me grow. My flatmates (Abubakr, Jean-Paul and Ahmed) were a bunch of very smart and wonderful people who were willing to teach me whenever I ran to them. My coursemates (big thanks to Gedeon et al.) were ever willing to help when approached too. The AMMI Tutors and entire AIMS Ghana staff were also very helpful in this journey, I cannot thank them enough for their impacts in my life.
 
-Online courses: I had a wonderful reading partner (Blessing Bassey) who encouraged me to take online courses that helped me discover a lot that I did not know and could not get in class. I took courses that helped me gain knowledge in Machine Learning, Deep Learning, Mathematics for Machine Learning and Python. I wish I took those online courses sooner, I probably would have connected more in class.
+**Online courses:** I had a wonderful reading partner (Blessing Bassey) who encouraged me to take online courses that helped me discover a lot that I did not know and could not get in class. I took courses that helped me gain knowledge in Machine Learning, Deep Learning, Mathematics for Machine Learning and Python. I wish I took those online courses sooner, I probably would have connected more in class.
 
-Study Group: I co-founded our campus NLP Study Group with a coursemate (Salomon Kabongo) a few weeks into the programme. The regular meetups gave me a prior, which made my NLP classes very interesting and ended up being my favourite during the programme. In the group, I also learnt how to read and present technical papers, which was one of our core activities (I wish I could write research papers the way I write stories). I joined other study groups too and they were really helpful in teaching me how to work as a team and collaborate on projects.
+**Study Group:** I co-founded our campus NLP Study Group with a coursemate (Salomon Kabongo) a few weeks into the programme. The regular meetups gave me a prior, which made my NLP classes very interesting and ended up being my favourite during the programme. In the group, I also learnt how to read and present technical papers, which was one of our core activities (I wish I could write research papers the way I write stories). I joined other study groups too and they were really helpful in teaching me how to work as a team and collaborate on projects.
 
-Online coding platforms: In order to improve my programming skills, I practiced on HackerRank and LeetCode. They helped me to make sense of those concepts I learnt. I was faced with hands-on exercises that were challenging and stimulating. Whenever I got stuck on problems, I had people I ran to, who were willing to put me through (many thanks to Kolawole Tajudeen).
+**Online coding platforms:** In order to improve my programming skills, I practiced on HackerRank and LeetCode. They helped me to make sense of those concepts I learnt. I was faced with hands-on exercises that were challenging and stimulating. Whenever I got stuck on problems, I had people I ran to, who were willing to put me through (many thanks to Kolawole Tajudeen).
 
-External help: I was fortunate to be introduced to some researchers (my project co-advisors) from FAIR (Emily Dinan, Kurt Shuster and Eric Smith) by my adorable project advisor, Antoine Bordes. They are very smart, accommodating and passionate. They took time, out of their busy schedules, to hold weekly meetings with me. I can tell them basically anything and learn virtually everything. They have great and amiable personalities and I want so much to be like them.
+**External help:** I was fortunate to be introduced to some researchers (my project co-advisors) from FAIR (Emily Dinan, Kurt Shuster and Eric Smith) by my adorable project advisor, Antoine Bordes. They are very smart, accommodating and passionate. They took time, out of their busy schedules, to hold weekly meetings with me. I can tell them basically anything and learn virtually everything. They have great and amiable personalities and I want so much to be like them.
 
 What I intend to do after AMMI
 ======
@@ -46,4 +46,4 @@ Human-Computer Interaction is an aspect of artificial intelligence that is fasci
 Additional reading
 ------
 
-See the suggested links below to read my other blog posts. If you find this post helpful, leave a comment about what helped your journey as a student.
+*See the suggested links below to read my other blog posts. If you find this post helpful, leave a comment about what helped your journey as a student.*
