--- a/_posts/2014-08-14-blog-post-3.md
+++ b/_posts/2014-08-14-blog-post-3.md
@@ -46,4 +46,4 @@ Human-Computer Interaction is an aspect of artificial intelligence that is fasci
 Additional reading
 ------
 
-*See the suggested links below to read my other blog posts. If you find this post helpful, leave a comment about what helped your journey as a student.*
+*See the suggested links below for my other blog posts.*
