--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -2,6 +2,7 @@
 title: 'Demo Day: AI_Saturday_Abuja (2nd Cohort)'
 date: 2019-06-12
 permalink: /posts/2019/06/blog-post-1/
+comments: true
 tags:
   - cool posts
   - category1
