update about me

--- a/_posts/2014-08-14-blog-post-3.md
+++ b/_posts/2014-08-14-blog-post-3.md
@@ -1,5 +1,5 @@
 ---
-title: 'Life as an African Master of Machine Intelligence (AMMI) Student'
+title: 'Life as an African Masters of Machine Intelligence (AMMI) Student'
 date: 2020-07-19
 permalink: /posts/2020/07/blog-post-3/
 tags:
